spacing issues

--- a/style.css
+++ b/style.css
@@ -126,9 +126,10 @@ h2 {
   color: #8B5A3C; /*38220F for coffee colour*/
   text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.5);
   font-size: clamp(20px, 4vw, 35px);
-  margin-top: clamp(-0.5rem, -3vw, -2rem); /*space above the lets have a virtual coffee text*/
+  margin-top: clamp(-0.5rem, -3vw, -5rem); /*space above the lets have a virtual coffee text*/
   margin-right: -1rem;
   margin-left: -1rem;
+  
 }
 
 /*the blinking curser in the header*/
@@ -148,6 +149,8 @@ h2 {
   gap: 1.2rem;
   position: relative;
   margin-top:-2rem;
+  margin-bottom:rem;
+  
   /*margin-top: calc(8vh + 0vh);*/
   /*border:solid rgb(3, 137, 247);*/
 }
@@ -309,8 +312,8 @@ footer {
 }
 
 .stacked-cards .card {
-  width: clamp(170px, 50vw, 250px);
-  height: clamp(225px, 65vw, 360px);
+  width: clamp(170px, 50vw, 222px);
+  height: clamp(225px, 65vw, 320px);
   border-radius: 2rem;
   border: 4px solid rgba(255, 255, 255, 0.5); /*border around the card*/
   background-color: #83796b;
